--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import 'src/theme/colors';
+@import "src/theme/font_mixins";
+@import "src/theme/reset";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
